@@ -3,7 +3,7 @@ outputReadable = "Output"
 runtimeReadable = "Runtime"
 propertiesReadable = "Properties"
 methodsReadable = "Methods"
-backtraceReadable = "Backtrace"
+pruneOutputReadable = "Prune output"
 
 analyseProtectedReadable = "Analyse protected properties:"
 analysePrivateReadable = "Analyse private properties:"
@@ -24,6 +24,7 @@ analysePrivateMethodsReadable = "Analyse private methods:"
 useScopeAnalysisReadable = "Use scope analysis:"
 analyseConstantsReadable = "Analyse constants:"
 maxStepNumberReadable = "Maximum steps in the backtrace:"
+arrayCountLimitReadable = "Maximum array size before fallback to simplified analysis:"
 
 analyseProtectedHelp = "Shall kreXX try to analyse the protected properties of a class?<br/> This may result in a lot of output."
 analysePrivateHelp = "Shall kreXX try to analyse the private properties of a class?<br/> This may result in a lot of output."
