@@ -127,7 +127,7 @@ class Traversable extends AbstractObjectAnalysis
             // Check, if we are handling a huge array. Huge arrays tend to result in a huge
             // output, maybe even triggering a emergency break. t oavoid this, we give them
             // a special callback.
-            if (count($parameter) > $this->pool->config->arrayCountLimit) {
+            if (count($parameter) > $this->pool->config->getSetting('arrayCountLimit')) {
                 $model->injectCallback(
                     $this->pool->createClass('Brainworxx\\Krexx\\Analyse\\Callback\\Iterate\\ThroughLargeArray')
                 )->setNormal('Simplified Traversable Info')
